--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
   }
+
+body {
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(34,22,173,1) 0%, rgba(50,46,170,1) 55%, rgba(41,30,177,1) 100%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2 {
+    padding-top: 10rem;
+    padding-bottom: 1pt;
+    font-size: 30pt;
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spacer {
+    padding: 1.5rem;
+}
+
+.quote-app {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.quote-getter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+}
+
+.quote-getter-text {
+    padding-top: 5rem;
+    padding-bottom: 5pt;
+}
+
+.quote-button {
+    height: 40px;
+    width: 150px;
+    align-self: center;
+    background: white;
+    border: white;
+    border-radius: 25px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    align-self: center;
+    justify-content: center;
+    color: white;
+    background-color: rgb(13, 10, 82);
+    border-radius: 25px;
+    width: 1200px;
+    height: 100px;
+}
+
+.quote-text {
+    margin-left: 5px;
 }
